Implemented dynamic language changing for the profile page

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -15,8 +15,6 @@
   "log_in": "Log in",
   "log_into_account": "Log into your account",
   "sign_up": "Sign up",
-  "english": "English",
-  "ukrainian": "Ukrainian",
   "continue_str": "Continue",
 
   "login_sc_log_into_account" : "Log into your account",
@@ -26,5 +24,17 @@
 
   "signup_sc_create_account" : "Create new account",
   "signup_sc_sign_up" : "Sign up",
-  "signup_sc_already_have_account" : "Already have an account?  Log in"
+  "signup_sc_already_have_account" : "Already have an account?  Log in",
+
+  "reset_pass_sc_enter_email" : "Enter your email. Reset link will be sent to your email",
+  "reset_pass_sc_reset_password" : "Reset password",
+
+  "main_sc_chat" : "Chat",
+  "main_sc_profile" : "Profile",
+  "main_sc_language" : "Language",
+  "main_sc_log_out" : "Log Out",
+
+  "language_set_sc_language" : "Language",
+  "language_set_sc_ukrainian" : "Ukrainian",
+  "language_set_sc_english" : "English"
 }
