--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,11 +1,11 @@
 {
   "onboarding_sc_skip": "Skip",
-  "onboarding_sc_title_1": "Title 1",
-  "onboarding_sc_text_1": "Body text 1",
-  "onboarding_sc_title_2": "Title 2",
-  "onboarding_sc_text_2": "Body text 2",
-  "onboarding_sc_title_3": "Title 3",
-  "onboarding_sc_text_3": "Body text 3",
+  "onboarding_sc_title_1": "Stay connected to the world",
+  "onboarding_sc_text_1": "All your friends in single chat room",
+  "onboarding_sc_title_2": "Share your impression",
+  "onboarding_sc_text_2": "Easily send images to your friends",
+  "onboarding_sc_title_3": "Top rated messenger",
+  "onboarding_sc_text_3": "Enjoy the features of the application",
   "onboarding_sc_next": "Next",
   "onboarding_sc_continue": "Finish",
 
