Added ukr translation

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -5,7 +5,7 @@
   "onboarding_sc_title_2": "Share your impression",
   "onboarding_sc_text_2": "Easily send images to your friends",
   "onboarding_sc_title_3": "Top rated messenger",
-  "onboarding_sc_text_3": "Enjoy the features of the application",
+  "onboarding_sc_text_3": "Enjoy cool features of the application",
   "onboarding_sc_next": "Next",
   "onboarding_sc_continue": "Finish",
 
