--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -1,11 +1,11 @@
 {
   "onboarding_sc_skip": "Пропустити",
-  "onboarding_sc_title_1": "Заголовок 1",
-  "onboarding_sc_text_1": "Текст 1",
-  "onboarding_sc_title_2": "Заголовок 2",
-  "onboarding_sc_text_2": "Текст 2",
-  "onboarding_sc_title_3": "Заголовок 3",
-  "onboarding_sc_text_3": "Текст 3",
+  "onboarding_sc_title_1": "Будьте на зв'язку з близькими",
+  "onboarding_sc_text_1": "Всі ваші друзі доступні у єдиному чаті",
+  "onboarding_sc_title_2": "Діліться своїми емоціями",
+  "onboarding_sc_text_2": "Легко відправляйте зображення своїм близьким",
+  "onboarding_sc_title_3": "Топовий месенджер",
+  "onboarding_sc_text_3": "Насалоджуйтесь багатим функціоналом додатку",
   "onboarding_sc_next": "Наступний",
   "onboarding_sc_continue": "Завершити",
 
